--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
+        <div id="alert" class="success">Success Message</div>
+        <div id="alert"  class="error">Error Message</div>
         <nav>
             <div class="app_name"><a href="index.html"><i class="fas fa-mask"></i>Super Hero App</a></div>
+            
             
             <div class="favourites">
                 <button><a href="favourites.html">Favourites</a></button>
