changes in layouts of hero and index

--- a/hero.html
+++ b/hero.html
@@ -4,9 +4,8 @@
         <link rel="stylesheet" type="text/css" href="hero.css">
     </head>
     <body>
-        <div id="alert" class="success">Success Message</div>
-        <div id="alert"  class="error">Error Message</div>
-        <section>
+        <span id="alert" class="success">Success Message</span>
+        <span id="alert"  class="error">Error Message</span>
         <main>
             <div class="app_name add_padd"><a href="index.html"><i class="fas fa-mask"></i>Super Hero App</a></div>
             
@@ -22,8 +21,6 @@
             <div><a href="#occupation">Occupation</a></div>
             <div><a href="#connections">Connections</a></div>
         </nav>
-    </section>
-    <section>
         <div class="helper">
         <div id="hero-detail">
             <div id="hero-name" class="add_padd"></div>
@@ -31,7 +28,7 @@
             <div id="main-details">
                 <div id="hero_img" class="add_padd">
                     <img>
-                    <div class="favourite">Add to favourites</div>
+                    <div id="fav_btn">Add to favourites</div>
                 </div>
                 <div id="other-details" class="add_padd">
                     <div class="heading">Powerstats</div>
@@ -53,7 +50,6 @@
             </div>
         </div>
     </div>
-    </section>
         <script type="text/javascript" src="hero.js"></script>
     </body>
 </html>
