favourite page added

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         <div id="alert" class="success">Success Message</div>
         <div id="alert"  class="error">Error Message</div>
         <nav>
-            <div class="app_name"><a href="index.html"><i class="fas fa-mask"></i>Super Hero App</a></div>
+            <div class="app_name"><a href="index.html">Super Hero App</a></div>
             
             
             <div class="favourites">
-                <button><a href="favourites.html">Favourites</a></button>
+                <button><a href="favourite.html">Favourites</a></button>
             </div>
         </nav>
         <div class="search">
