the gender filter is also added

--- a/female.html
+++ b/female.html
@@ -14,17 +14,15 @@
                 <button><a href="favourite.html">Favourites</a></button>
             </div>
         </nav>
-        <div class="search">
-            <input type="text" id="search" placeholder="Search your hero...">
-        </div>
         <div id="filter">
-        <div class="filter_class"><a href="male.html">Male</a></div>
-        <div class="filter_class"><a href="female.html">Female</a></div>
-    </div>
+            <div class="filter_class"><a href="male.html">Male</a></div>
+            
+        </div>
+        <div id="loading">Loading ...</div>
         <div id="results">
             <div id="result">
             </div>
         </div>
-        <script type="text/javascript" src="index.js"></script>
+        <script type="text/javascript" src="female.js"></script>
     </body>
 </html>
