final changes done

--- a/favourite.html
+++ b/favourite.html
@@ -1,19 +1,26 @@
 <html>
     <head>
-        <title>Super Hero App Home</title>
+        <!-- title -->
+        <title>Favourites</title>
+        <!-- adding the style sheet -->
         <link rel="stylesheet" type="text/css" href="favourite.css">
     </head>
+    <!-- body -->
     <body>
-        
+        <!-- nav-bar -->
         <nav>
             <div class="app_name"><a href="index.html">Super Hero App</a></div>
         </nav>
+        <!-- notification alert -->
         <div id="alert" class="success">Success Message</div>
         <div id="alert"  class="error">Error Message</div>
+        <!-- container for storing all favourite characters -->
         <div id="result-container">
             <div id="result">
             </div>
         </div>
+        <!-- script -->
         <script type="text/javascript" src="favourite.js"></script>
     </body>
+    <!-- body ends -->
 </html>
