--- a/index.html
+++ b/index.html
@@ -1,30 +1,41 @@
 <html>
     <head>
+        <!-- title -->
         <title>Super Hero App Home</title>
+        <!-- adding style sheet -->
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
+    <!-- body -->
     <body>
+        <!-- notification alert -->
         <div id="alert" class="success">Success Message</div>
         <div id="alert"  class="error">Error Message</div>
+        <!-- nav-bar -->
         <nav>
+            <!-- app name -->
             <div class="app_name"><a href="index.html">Super Hero App</a></div>
             
-            
+            <!-- favourite tab -->
             <div class="favourites">
                 <button><a href="favourite.html">Favourites</a></button>
             </div>
         </nav>
+        <!-- search option -->
         <div class="search">
             <input type="text" id="search" placeholder="Search your hero...">
         </div>
+        <!-- filter on the basis of male and female -->
         <div id="filter">
         <div class="filter_class"><a href="male.html">Male</a></div>
         <div class="filter_class"><a href="female.html">Female</a></div>
     </div>
+    <!-- div for storing the searched results -->
         <div id="results">
             <div id="result">
             </div>
         </div>
+        <!-- script -->
         <script type="text/javascript" src="index.js"></script>
     </body>
+    <!-- body ends -->
 </html>
